--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,89 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body, * {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+
+}
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.main-container{
+max-width: 1400px; 
+margin: auto;
+width: 100%;
+
+}
+.layout{
+  padding: 10px;
+}
+
+.cart-icon{
+    font-size: 25px;
+    color: gray;
+    cursor: pointer;
+    position: relative;
+    transition: transform .4s ease;
+    border: none;
+    background-color: transparent;
+  }
+  .cart-icon:hover{
+    transform: scale(1.1,1.1);
+  }
+  .cart-item-qty{
+    position: absolute;
+    right: -8px;
+    bottom: 12px;
+    font-size: 12px;
+    color: #eee;
+    background-color: #f02d34;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    font-weight: 600;
+  
+  }
+
+  
+/* START: Footer styles */
+.footer {
+    @apply flex flex-col text-black mt-5 border-t border-gray-100;
+  }
+  
+  .footer__links-container {
+    @apply flex max-md:flex-col flex-wrap justify-between gap-5 sm:px-16 px-6 py-10;
+  }
+  
+  .footer__rights {
+    @apply flex flex-col justify-start items-start gap-6;
+  }
+  
+  .footer__links {
+    @apply flex-1 w-full flex md:justify-end flex-wrap max-md:mt-10 gap-20;
+  }
+  
+  .footer__link {
+    @apply flex flex-col gap-6 text-base min-w-[170px];
+  }
+  
+  .footer__copyrights {
+    @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
+  }
+  
+  .footer__copyrights-link {
+    @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+  }
+  /* END: Footer styles */
